Archive2/1a/d9c0e69672e0e2/output
+ g++ -std=c++11 -O0 -W -Wall -Wextra -pedantic -pthread main.cpp
main.cpp: In function 'int main()':
main.cpp:23:14: error: ambiguous overload for 'operator==' (operand types are 'foo' and 'bool')
     (void)(f == true);
              ^
main.cpp:23:14: note: candidates are:
main.cpp:23:14: note: operator==(int, int) <built-in>
main.cpp:23:14: note: operator==(long int, int) <built-in>
